--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -3,5 +3,6 @@
   }
   .page-enter, .page-leave-active {
     opacity: 0;
-    transform: scale(0);
+    /* transform: scale(0); */
+    transform: translate(-70px, 0);
   }
